--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
       name="description"
       content="Web site created using @vitejs/plugin-react"
     />
-    <link rel="apple-touch-icon" href="/logo192.png" />
+    <link rel="apple-touch-icon" href="/01.jpg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="/manifest.json" />
-    <title>React App</title>
+    <title>Portfolio WIND</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript></noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
